--- a/brownie-config.yaml
+++ b/brownie-config.yaml
@@ -7,3 +7,7 @@ compiler:
     remappings:
       - "@chainlink=smartcontractkit/chainlink-brownie-contracts@1.1.1"
       - "@openzeppelin=OpenZeppelin/openzeppelin-contracts@3.4.0"
+
+dotenv: .env
+wallets:
+  from_key: ${PRIVATE_KEY}
